# ChangeLog for x11-libs/qt
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/qt/Attic/ChangeLog,v 1.375 2006/10/27 16:38:03 killerfox Exp $

  27 Oct 2006; René Nussbaumer <killerfox@gentoo.org> qt-3.3.6-r4.ebuild,
  qt-4.1.4-r2.ebuild:
  Stable on hppa. See bug #151838.

  25 Oct 2006; Diego Pettenò <flameeyes@gentoo.org> files/digest-qt-4.1.4,
  files/digest-qt-4.1.4-r1, files/digest-qt-4.1.4-r2, Manifest:
  Fix digest, close bug #149809.

  24 Oct 2006; Tobias Scherbaum <dertobi123@gentoo.org> qt-3.3.6-r4.ebuild,
  qt-4.1.4-r2.ebuild:
  ppc stable, bug #151838

  24 Oct 2006; Simon Stelling <blubb@gentoo.org> qt-3.3.6-r4.ebuild,
  qt-4.1.4-r2.ebuild:
  stable on amd64 wrt bug 151838

  24 Oct 2006; Joshua Jackson <tsunam@gentoo.org> qt-3.3.6-r4.ebuild,
  qt-4.1.4-r2.ebuild:
  Stable x86; security bug #151838

  23 Oct 2006; Gustavo Zacarias <gustavoz@gentoo.org> qt-3.3.6-r4.ebuild,
  qt-4.1.4-r2.ebuild:
  Stable on sparc wrt security #151838

  22 Oct 2006; Markus Rothe <corsair@gentoo.org> qt-3.3.6-r4.ebuild,
  qt-4.1.4-r2.ebuild:
  Stable on ppc64; bug #151838

  20 Oct 2006; <nixnut@gentoo.org> qt-4.2.0-r1.ebuild, qt-4.2.0-r2.ebuild:
  Added ~ppc wrt bug 150888

  20 Oct 2006; Marcus D. Hanwell <cryos@gentoo.org> qt-4.2.0.ebuild,
  qt-4.2.0-r1.ebuild, qt-4.2.0-r2.ebuild:
  Marked ~amd64, bug 150888.

*qt-4.2.0-r2 (20 Oct 2006)
*qt-4.1.4-r2 (20 Oct 2006)
*qt-3.3.6-r4 (20 Oct 2006)

  20 Oct 2006; Diego Pettenò <flameeyes@gentoo.org>
  +files/qt-3.3.6-CVE-2006-4811-bis.patch,
  +files/qt-4.1.4-CVE-2006-4811-bis.patch,
  +files/qt-4.2.0-CVE-2006-4811-bis.patch, +qt-3.3.6-r4.ebuild,
  +qt-4.1.4-r2.ebuild, +qt-4.2.0-r2.ebuild:
  Add new version of the patches for CVE-2006-4811 directly from Trolltech,
  hopefully fixing the problems for good.

  20 Oct 2006; Bryan Østergaard <kloeri@gentoo.org> qt-3.3.6-r3.ebuild:
  Stable on Alpha, bug 151838.
