@@ -1,6 +1,10 @@
 # ChangeLog for x11-libs/qt
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/qt/Attic/ChangeLog,v 1.375 2006/10/27 16:38:03 killerfox Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/qt/Attic/ChangeLog,v 1.376 2006/10/29 19:59:54 kloeri Exp $
+
+  29 Oct 2006; Bryan Østergaard <kloeri@gentoo.org> qt-3.3.6-r4.ebuild,
+  qt-4.1.4-r2.ebuild:
+  Stable on ia64, bug 151838.
 
   27 Oct 2006; René Nussbaumer <killerfox@gentoo.org> qt-3.3.6-r4.ebuild,
   qt-4.1.4-r2.ebuild:
